--- a/ssfl/templates/base/footer.html
+++ b/ssfl/templates/base/footer.html
@@ -1,2 +1,13 @@
 <!DOCTYPE html>
-<div class="footer">Sunnyside Times is a project of the residents of Sunnyside Retirement Community</div>
+<footer>
+    <div class="row">
+        <div class="col-md-6">
+            <p>Sunnyside Times is a project of the residents of Sunnyside Retirement Community </p>
+        </div>
+        <div class="col-md-6 text-md-right">
+            <a href="#" class="text-dark">Terms of Use</a>
+            <span class="text-muted mx-2">|</span>
+            <a href="#" class="text-dark">Privacy Policy</a>
+        </div>
+    </div>
+</footer>
