--- a/ssfl/templates/base/nav.html
+++ b/ssfl/templates/base/nav.html
@@ -88,8 +88,11 @@
                            href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
                             Maps
                         </a>
-                         <a class="navbar-item" href="{{ url_for('admin_bp.upload_form') }}">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.upload_form') }}">
                             Upload a File
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.add_json_template') }}">
+                            Upload/edit JSON
                         </a>
                         <hr class="navbar-divider">
                         <a class="navbar-item">
