Fix temp file handling for photos to use strings for send_file.

--- a/ssfl/templates/admin/upload.html
+++ b/ssfl/templates/admin/upload.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Python Flask File Upload Example</title>
-{% include 'base/layout.html' %}
+{% include 'base/layout.jinja2' %}
 {% block content %}
     <h2>Select a file to upload</h2>
     <h3> Need to worry about overwriting</h3>
