Correct calendar html for header

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -69,7 +69,7 @@
                     </a>
 
                     <div class="navbar-dropdown">
-                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_import_page') }}">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
                             Edit DB Page
                         </a>
                         <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
