--- a/ssfl/templates/main/calendar.jinja2
+++ b/ssfl/templates/main/calendar.jinja2
@@ -2,18 +2,22 @@
 <html>
 <head>
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/bootstrap/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.css">
-    <!--    {% assets "css_bundle" %}-->
-    <!--        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>-->
-    <!--    {% endassets %}-->
+     {% assets "css_bundle" %}
+         <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>
+     {% endassets %}
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-    <!--    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>-->
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
     <script type="application/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.js"></script>
@@ -105,12 +109,12 @@
                     // alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
                     // alert('View: ' + info.view.type);
 
-                    // change the border color just for fun
-                    info.el.style.borderColor = 'red';
+                    // change the border color for elements mouse has passed over just for fun
+                    // info.el.style.borderColor = 'green';
                     let tmpnode = document.createElement('div');
                     tmpnode.style.top = info.jsEvent.pageY - 20;
                     tmpnode.style.left = info.jsEvent.pageX + 25;
-                    tmpnode.style.backgroundColor = 'red';
+                    tmpnode.style.backgroundColor = 'lightcoral';
                     tmpnode.style.opacity = '100%'
                     tmpnode.setAttribute('class', 'event_popup');
 
@@ -186,17 +190,33 @@
             calendar.render();
         });
         //@ sourceURL=dynamicScript.js
+
     </script>
 </head>
 <body>
-{% include 'base/nav.jinja2' %}
-<hr/>
-<div id='wrap'>
+<div class="container-fluid">
+    {% include 'base/nav.jinja2' %}
+    {% set flash_message_type = 'error' %}
+    {% include 'base/flashed_messages.jinja2' %}
+    <div id='wrap'>
 
-    <div id='calendar'></div>
+        <div id='calendar'></div>
 
-    <div style='clear:both'></div>
+        <div style='clear:both'></div>
+
+        {% set flash_message_type = 'success' %}
+        {% include 'base/flashed_messages.jinja2' %}
+        {% include 'base/footer.jinja2' %}
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </div>
-{% include 'base/footer.jinja2' %}
 </body>
 </html>
