--- a/ssfl/templates/main/calendar.jinja2
+++ b/ssfl/templates/main/calendar.jinja2
@@ -44,7 +44,7 @@
                     right: 'prev,next today '
                 },
                 editable: false,
-                themeSystem: 'standard',  //alternate is bootstrap and fontAwesome (include above)
+                themeSystem: 'bootstrap',  //alternate is bootstrap and fontAwesome (include above)
                 firstDay: 0, //  1(Monday) this can be changed to 0(Sunday) for the USA system
                 selectable: true,
                 defaultView: 'dayGridMonth',
@@ -227,11 +227,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <script>
-{#        var fcl = $('.fc-left');#}
-{#        var fcl_buttons = fcl.find("button");#}
-{#        alert("BUTTONS:" + fcl_buttons);#}
-    </script>
 </div>
 </body>
 </html>
