--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -91,8 +91,11 @@
                         <a class="navbar-item" href="{{ url_for('admin_bp.upload_form') }}">
                             Upload a File
                         </a>
-                        <a class="navbar-item" href="{{ url_for('admin_bp.add_json_template') }}">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.up_down_load_json_template') }}">
                             Upload/edit JSON
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.make_story_json_template') }}">
+                            Manage JSON templates
                         </a>
                         <hr class="navbar-divider">
                         <a class="navbar-item">
