--- a/ssfl/templates/main/calendar.jinja2
+++ b/ssfl/templates/main/calendar.jinja2
@@ -105,7 +105,7 @@
                         },
                     },
                     community_button: {
-                        text: 'Community Events',
+                        text: 'Community',
                         click: function () {
                             button_state.set_category(this.firstChild.valueOf());
                             let src = calendar.getEventSources();
